[package]
name = "crudkit-rs-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
crudkit-derive-core = { path = "../../../crudkit-core/crates/crudkit-derive-core" }
crudkit-rs-macros-core = { path = "../crudkit-rs-macros-core" }
darling = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro-type-name = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
