[package]
name = "crudkit-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
keycloak-auth = ["dep:axum-keycloak-auth"]

[dependencies]
crudkit-resource = { path = "../../../crudkit-core/crates/crudkit-resource" }
crudkit-condition = { path = "../../../crudkit-core/crates/crudkit-condition" }
crudkit-core = { path = "../../../crudkit-core/crates/crudkit-core" }
crudkit-id = { path = "../../../crudkit-core/crates/crudkit-id" }
crudkit-validation = { path = "../../../crudkit-core/crates/crudkit-validation" }
crudkit-collaboration = { path = "../../../crudkit-core/crates/crudkit-collaboration" }

crudkit-rs-macros = { path = "../crudkit-rs-macros" }
crudkit-core-macros = { path = "../../../crudkit-core/crates/crudkit-core-macros" }

async-trait = "0.1.89"
axum = "0.8.8"
axum-keycloak-auth = { version = "0.8.3", optional = true }
error-stack = "0.6.0"
indexmap = { version = "2.12.1", features = ["serde"] }
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
snafu = { version = "0.8.9", features = ["backtrace"] }
time = { version = "0.3.44", features = ["serde", "serde-well-known"] }
tracing = "0.1.44"
utoipa = { version = "5.4.0", features = ["time", "uuid"] }
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }
