[package]
name = "crudkit-sea-orm"
version = "0.1.0"
edition = "2021"

[dependencies]
crudkit-condition = { path = "../../../crudkit-condition" }
crudkit-rs = { path = "../crudkit-rs" }
crudkit-shared = { path = "../../../crudkit-shared" }

indexmap = { version = "2.2.6", features = ["serde"] }
sea-orm = { version = "0.12.15", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx",
    "sqlx-postgres",
] }
sea-query = { version = "0.30.7" }
serde = { version = "1.0.197", features = ["derive"] }
snafu = { version = "0.8.2", features = ["backtrace"] }
tracing = "0.1.40"
utoipa = { version = "5.3.1", features = ["time", "uuid"] }
uuid = { version = "1.8.0", features = ["v4", "v7", "serde"] }
