[package]
name = "crudkit-sea-orm"
version = "0.1.0"
edition = "2024"

[dependencies]
crudkit-condition = { path = "../../../crudkit-condition" }
crudkit-rs = { path = "../crudkit-rs" }
crudkit-shared = { path = "../../../crudkit-shared" }

indexmap = { version = "2.12.1", features = ["serde"] }
sea-orm = { version = "0.12.15", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx",
    "sqlx-postgres",
] }
sea-query = { version = "0.30.7" }
serde = { version = "1.0.228", features = ["derive"] }
snafu = { version = "0.8.9", features = ["backtrace"] }
time = { version = "0.3.44" }
tracing = "0.1.44"
utoipa = { version = "5.4.0", features = ["time", "uuid"] }
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }
